[tool.poetry]
name = "py-vercel"
version = "0.1.0"
description = ""
authors = ["tsiresymila <tsiresymila@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "py_vercel"}]

[tool.poetry.dependencies]
python = "3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
